# NpmGuard

./: .gitignore  2026-05-04-220442-this-session-is-being-continued-from-a-previous-c.txt  AGENTS.md  CLAUDE.md  PLAN.md  README.md  kill-dev.sh  kit.json  package-lock.json  package.json  run.sh
engine/: .env.template  .gitignore  CLAUDE.md  README.md  TESTING.md  package-lock.json  package.json  pyproject.toml  run.sh
engine/alembic/: env.py
engine/alembic/versions/: 0001_create_llm_runs.py  0001_create_stream_events.py  0002_create_npmguard_state.py  0003_add_llm_attempt_attribution_transport.py  0004_widen_llm_attempt_columns.py  0005_create_panel_state.py
engine/config/: watchlist-packages.json  watchlist-real-smoke.json  watchlist-smoke.json
engine/demo-data/: chalk.json  react.json  test-pkg-dom-inject.json  test-pkg-env-exfil.json
engine/kit_llm/: __init__.py  capture.py  client.py  config.py  errors.py  mock.py  parser.py  prompts.py  provider.py  schema.py  spend.py  tools.py
engine/kit_spine/: __init__.py  clock.py  config.py  db.py  errors.py  logging.py  notify_polling.py  notify_postgres.py  ports.py  request_id.py
engine/kit_stream/: __init__.py  models.py  router.py  service.py
engine/migrations/: 001_init.sql  002_repo_auditability.sql  003_verdict_explanations.sql  004_billing.sql  005_public_repo_scans.sql
engine/npmguard/: __init__.py  api.py  audit_log.py  bench.py  config.py  demo.py  deps.py  docker.py  errors.py  events.py  evidence.py  experiments.py  graph.py  hypothesis_agent.py  inventory.py  llm_runtime.py  main.py  observation.py  ops.py  orchestrator.py  payments.py  persistence.py  phases.py  pipeline.py  report_store.py  resolve.py  sensors.py  service.py  validation.py
engine/scripts/: anchor-certificates.ts  audit-batch.ts  audit-latest.ts  check-benchmark-results.ts  ensv2-subname.ts  full-oracle-probe.ts  gate.sh  llm_phase_matrix.py  phase-a-smoke.ts  publish-storage.ts  record-demo.ts  smoke-llm.ts
engine/src/: audit-persistence.ts  billing.ts  caps.test.ts  caps.ts  certificate-anchor-chain.ts  certificate-anchor.test.ts  certificate-anchor.ts  certificate-batch-store.ts  certificate-merkle.test.ts  certificate-merkle.ts  certificate-store.ts  certificates.test.ts  certificates.ts  chain-payment-map.ts  chain.ts  config.ts  crypto.test.ts  crypto.ts  db.ts  demo-recordings.test.ts  demo.ts  errors.ts  events.ts  index.ts  llm.ts  models.ts  payment-map.ts  pipeline.ts  proof-quality.test.ts  proof-quality.ts  report-store.test.ts  report-store.ts  session.test.ts  session.ts  storage-store.ts  stripe.ts  util.ts  verdict-index.test.ts  verdict-index.ts
engine/tests/: conftest.py  test_api.py  test_audit_log.py  test_events_sse.py  test_evidence.py  test_experiments.py  test_fail_fast.py  test_graph.py  test_hypothesis_agent.py  test_hypothesis_generation.py  test_judge_contract.py  test_orchestrator_errors.py  test_orchestrator_success.py  test_panel_alerts.py  test_panel_billing.py  test_panel_caps.py  test_panel_checks.py  test_panel_crypto.py  test_panel_github_client.py  test_panel_jobs.py  test_panel_lockfile.py  test_panel_public_repos.py  test_panel_rollup.py  test_panel_sessions.py  test_panel_verdict_index.py  test_panel_webhooks.py  test_payments.py  test_persistence.py  test_replay_support.py  test_report_store.py  test_resolve.py  test_sensors.py  test_service_queue.py  test_trigger_command.py
engine/tools/: export_fixtures.py  fixture_lint.py  record_demo.py
(+697 files in other folders)
