[project]
name = "npmguard-engine"
version = "0.1.0"
description = "NpmGuard audit engine"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "email-validator>=2.2",
    "fastapi>=0.115",
    "httpx>=0.27",
    "openai>=1.55",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rfc8785>=0.1.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "stripe>=12.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
    "web3>=7.0",
]

[project.scripts]
npmguard-engine = "npmguard.main:main"
npmguard-ops = "npmguard.ops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["npmguard", "kit_spine", "kit_llm", "kit_stream"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "kit_llm",
    "kit_spine",
    "kit_stream",
    "npmguard/contract/models.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]
